--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "mysql2": "^3.12.0",
+    "pdfkit": "^0.16.0",
+    "pdfkit-table": "^0.1.99",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
